# lwm2mcc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  todo.md
docs/lwm2m_client/: Architecture.md  Coding Conventions.md  Memory Management.md  Platform Abstraction Layer.md  Project Structure.md  Roadmap.md  Versioning.md  Welcome.md
docs/lwm2m_client/.obsidian/: workspace.json
examples/: testapp.c
include/lwm2m/: coap.h  lwm2m.h  memory.h  object.h  platform.h  security.h  transport.h  version.h
include/lwm2m/objects/: device.h
include/lwm2m/utils/: common.h
src/: lwm2m.c  lwm2m_internal.h  memory.c  object.c
src/objects/: security.c  server.c
src/platform/: transport_libcoap.c  transport_libcoap.h
src/tools/: min_heap.c  min_heap.h  sorted_array.c  sorted_array.h  timers.c  timers.h
src/utils/: assert.h  log.c  log.h
